Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-78822

keyPressEvent override warnings in qtcharts

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Not Evaluated Not Evaluated
    • None
    • 5.14
    • Charts
    • None
    • Emscripten 1.38.45 with "upstream" backend
    • All

      I'm observing the following warnings when building qtcharts:

      em++ -c -pipe -O3 -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -s ALLOW_MEMORY_GROWTH=1 -Wall -Wextra -Wdate-time -Winconsistent-missing-override -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_LINKED_LIST -DQT_BUILD_QMLCHARTS_LIB -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_STATICPLUGIN -DQT_PLUGIN -DQT_QUICK_LIB -DQT_CHARTS_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_QMLMODELS_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -DQT_PLUGIN_RESOURCE_INIT_FUNCTION=qtchartsqml2_plugin_resource_init -I/development/qt5/qtcharts/src/chartsqml2 -I. -I/development/qt5/qtcharts/src/chartsqml2 -I/development/qt5_build/qtdeclarative/include -I/development/qt5_build/qtdeclarative/include/QtQuick -I../../include/QtCharts/5.14.0 -I../../include/QtCharts/5.14.0/QtCharts -I../../include -I../../include/QtCharts -I/development/qt5_build/qtbase/include -I/development/qt5_build/qtbase/include/QtWidgets -I/development/qt5_build/qtbase/include/QtGui -I/development/qt5_build/qtdeclarative/include/QtQmlModels -I/development/qt5_build/qtdeclarative/include/QtQml -I/development/qt5_build/qtbase/include/QtNetwork -I/development/qt5_build/qtbase/include/QtCore -I.moc -I/development/qt5/qtbase/mkspecs/wasm-emscripten -o .obj/declarativesplineseries.o /development/qt5/qtcharts/src/chartsqml2/declarativesplineseries.cpp
      In file included from /development/qt5/qtcharts/src/chartsqml2/declarativechart.cpp:48:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/chartdataset_p.h:1:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/../../../../../../../qt5/qtcharts/src/charts/chartdataset_p.h:44:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/qabstractaxis_p.h:1:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/../../../../../../../qt5/qtcharts/src/charts/axis/qabstractaxis_p.h:43:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/chartaxiselement_p.h:1:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/../../../../../../../qt5/qtcharts/src/charts/axis/chartaxiselement_p.h:46:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/datetimeaxislabel_p.h:1:
      ../../include/QtCharts/5.14.0/QtCharts/private/../../../../../../../qt5/qtcharts/src/charts/axis/datetimeaxis/datetimeaxislabel_p.h:54:10: warning: 'keyPressEvent' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
          void keyPressEvent(QKeyEvent *event);
               ^
      /development/qt5_build/qtbase/include/QtWidgets/../../../../qt5/qtbase/src/widgets/graphicsview/qgraphicsitem.h:946:10: note: overridden virtual function is here
          void keyPressEvent(QKeyEvent *event) override;
               ^
      In file included from /development/qt5/qtcharts/src/chartsqml2/declarativechart.cpp:48:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/chartdataset_p.h:1:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/../../../../../../../qt5/qtcharts/src/charts/chartdataset_p.h:44:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/qabstractaxis_p.h:1:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/../../../../../../../qt5/qtcharts/src/charts/axis/qabstractaxis_p.h:43:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/chartaxiselement_p.h:1:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/../../../../../../../qt5/qtcharts/src/charts/axis/chartaxiselement_p.h:47:
      In file included from ../../include/QtCharts/5.14.0/QtCharts/private/valueaxislabel_p.h:1:
      ../../include/QtCharts/5.14.0/QtCharts/private/../../../../../../../qt5/qtcharts/src/charts/axis/valueaxis/valueaxislabel_p.h:52:10: warning: 'keyPressEvent' overrides a member function but is not marked 'override' [-Winconsistent-missing-override]
          void keyPressEvent(QKeyEvent *event);
               ^
      /development/qt5_build/qtbase/include/QtWidgets/../../../../qt5/qtbase/src/widgets/graphicsview/qgraphicsitem.h:946:10: note: overridden virtual function is here
          void keyPressEvent(QKeyEvent *event) override;
               ^
      2 warnings generated.
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            forderud Fredrik Orderud
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes