Explicitly override keyPressEvent methods

Done to fix annoying compiler warnings when building qtcharts.

Task-number: QTBUG-78822
Change-Id: I8b6ee8fffa203000302f4fb99eb61c00b36d7850
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>